# demo_drf

./: .gitignore  pyproject.toml
djangoProject/: settings.py  urls.py
resume/: admin.py  models.py  tests.py
resume/api/: permissions.py  serializers.py  urls.py  views.py
resume/migrations/: 0001_initial.py
